refactor: moved duplicated code for server class creation and code cleanup